# search_actions_in_videos

./: .gitignore  README.md  main.py  metadata.csv  pyproject.toml
analysis/: analysis_report.md  analyze_results.py  outliers.csv
conf/: README.md  config.yaml
conf/model/: clip.yaml
conf/paths/: local.yaml
conf/processing/: scene_detection.yaml
conf/search/: high_precision.yaml
schemas/: settings.py
src/: clip_encoder.py  fragment_extractor.py  metadata_manager.py  search_engine.py  video_processor.py
